Correção dos data-test dos pratos

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     <div class="img_produto">
                         <img src="./imgs/frango_yin_yang.png" alt="">
                     </div>
-                    <p class="nome_prato">Frango Yin Yang</p>
-                    <span data-test="item-name">Frango acompanhado de batata frita e salada</span>
+                    <p data-test="item-name" class="nome_prato">Frango Yin Yang</p>
+                    <span >Frango acompanhado de batata frita e salada</span>
                     <p data-test="item-price" class="preco">R$ 27,90</p>
                     <ion-icon  class="check pratoDesabilitado" name="checkmark-circle"></ion-icon>
                 </div>
@@ -34,8 +34,8 @@
                     <div class="img_produto">
                         <img src="./imgs/arroz_carreteiro.jpeg" alt="">
                     </div>
-                    <p class="nome_prato">Arroz Carreteiro</p>
-                    <span data-test="item-name">Arroz com carne seca picada e bacon</span>
+                    <p data-test="item-name" class="nome_prato">Arroz Carreteiro</p>
+                    <span >Arroz com carne seca picada e bacon</span>
                     <p data-test="item-price" class="preco">R$ 37,70</p>
                     <ion-icon  class="check pratoDesabilitado" name="checkmark-circle"></ion-icon>
                 </div>
@@ -43,8 +43,8 @@
                     <div class="img_produto">
                         <img src="./imgs/frango_passarinho.jpeg" alt="">
                     </div>
-                    <p class="nome_prato">Frango a passarinho</p>
-                    <span data-test="item-name">Frango sequinho acompado de molho</span>
+                    <p data-test="item-name" class="nome_prato">Frango a passarinho</p>
+                    <span >Frango sequinho acompado de molho</span>
                     <p data-test="item-price" class="preco">R$ 19,90</p>
                     <ion-icon  class="check pratoDesabilitado" name="checkmark-circle"></ion-icon>
                 </div>
@@ -52,8 +52,8 @@
                     <div class="img_produto">
                         <img src="./imgs/lasanha_bolonhesa.jpeg" alt="">
                     </div>
-                    <p class="nome_prato">Lasanha à Bolonhesa</p>
-                    <span data-test="item-name">Lasanha de carne com arroz</span>
+                    <p data-test="item-name" class="nome_prato">Lasanha à Bolonhesa</p>
+                    <span >Lasanha de carne com arroz</span>
                     <p data-test="item-price" class="preco">R$ 45,90</p>
                     <ion-icon  class="check pratoDesabilitado" name="checkmark-circle"></ion-icon>
                 </div>
