Correção dos data-test dos pratos

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                     <div class="img_produto">
                         <img src="./imgs/coca-cola.png" alt="">
                     </div>
-                    <p class="nome_prato">Refrigerante lata</p>
-                    <span data-test="item-name">Sabores variados</span>
+                    <p data-test="item-name" class="nome_prato">Refrigerante lata</p>
+                    <span>Sabores variados</span>
                     <p data-test="item-price" class="preco">R$ 6,90</p>
                     <ion-icon  class="check bebidaDesabilitada" name="checkmark-circle"></ion-icon>
                 </div>
@@ -76,8 +76,8 @@
                     <div class="img_produto">
                         <img src="./imgs/refris_2l.jpeg" alt="">
                     </div>
-                    <p class="nome_prato">Refrigerante 2L</p>
-                    <span data-test="item-name">Sabores Variados</span>
+                    <p data-test="item-name" class="nome_prato">Refrigerante 2L</p>
+                    <span>Sabores Variados</span>
                     <p data-test="item-price" class="preco">R$ 12,00</p>
                     <ion-icon  class="check bebidaDesabilitada" name="checkmark-circle"></ion-icon>
                 </div>
@@ -85,8 +85,8 @@
                     <div class="img_produto">
                         <img src="./imgs/sucos_variados.jpeg" alt="">
                     </div>
-                    <p class="nome_prato">Copo de Suco</p>
-                    <span data-test="item-name">Sabores variados</span>
+                    <p data-test="item-name" class="nome_prato">Copo de Suco</p>
+                    <span>Sabores variados</span>
                     <p data-test="item-price" class="preco">R$ 8,90</p>
                     <ion-icon  class="check bebidaDesabilitada" name="checkmark-circle"></ion-icon>
                 </div>
@@ -94,8 +94,8 @@
                     <div class="img_produto">
                         <img src="./imgs/cervejas.jpeg" alt="">
                     </div>
-                    <p class="nome_prato">Cervejas 600ml</p>
-                    <span data-test="item-name">Sabores variados</span>
+                    <p data-test="item-name" class="nome_prato">Cervejas 600ml</p>
+                    <span>Sabores variados</span>
                     <p data-test="item-price" class="preco">R$ 9,90</p>
                     <ion-icon  class="check bebidaDesabilitada" name="checkmark-circle"></ion-icon>
                 </div>
@@ -108,8 +108,8 @@
                     <div class="img_produto">
                         <img src="./imgs/financier.jpeg" alt="">
                     </div>
-                    <p class="nome_prato">Financier (3 un)</p>
-                    <span data-test="item-name">Pequeno bolo francês de amêndoa</span>
+                    <p data-test="item-name" class="nome_prato">Financier (3 un)</p>
+                    <span>Pequeno bolo francês de amêndoa</span>
                     <p data-test="item-price" class="preco">R$ 15,90</p>
                     <ion-icon  class="check sobremesaDesabilitada" name="checkmark-circle"></ion-icon>
                 </div>
@@ -117,8 +117,8 @@
                     <div class="img_produto">
                         <img src="./imgs/mousse.jpeg" alt="">
                     </div>
-                    <p class="nome_prato">Mousse de Maracujá</p>
-                    <span data-test="item-name">Uma mousse de maracujá com 400ml</span>
+                    <p data-test="item-name" class="nome_prato">Mousse de Maracujá</p>
+                    <span>Uma mousse de maracujá com 400ml</span>
                     <p data-test="item-price" class="preco">R$ 10,90</p>
                     <ion-icon  class="check sobremesaDesabilitada" name="checkmark-circle"></ion-icon>
                 </div>
@@ -126,8 +126,8 @@
                     <div class="img_produto">
                         <img src="./imgs/petit_gateau.jpeg" alt="">
                     </div>
-                    <p class="nome_prato">Petit Gateau</p>
-                    <span data-test="item-name">Petit Gateau com sorvete branco</span>
+                    <p data-test="item-name" class="nome_prato">Petit Gateau</p>
+                    <span>Petit Gateau com sorvete branco</span>
                     <p data-test="item-price" class="preco">R$ 19,90</p>
                     <ion-icon  class="check sobremesaDesabilitada" name="checkmark-circle"></ion-icon>
                 </div>
@@ -135,8 +135,8 @@
                     <div class="img_produto">
                         <img src="./imgs/pudim.png" alt="">
                     </div>
-                    <p class="nome_prato">Pudim</p>
-                    <span data-test="item-name">Pudim sem maisena(Oh, glória)</span>
+                    <p data-test="item-name" class="nome_prato">Pudim</p>
+                    <span>Pudim sem maisena(Oh, glória)</span>
                     <p data-test="item-price" class="preco">R$ 14,90</p>
                     <ion-icon  class="check sobremesaDesabilitada" name="checkmark-circle"></ion-icon>
                 </div>
